<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.farr.android.farrapp.LoginActivity"
    android:background="#26164c"
    android:weightSum="1">




    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:id="@+id/headerLinearLay"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="69dp"
            android:layout_height="67dp"
            android:id="@+id/imageView3"
            android:src="@mipmap/farrapp_logo_login"
            android:layout_gravity="left"
            android:layout_alignParentLeft="false"
            android:contentDescription="logo_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_vision"
            android:id="@+id/textView2"
            android:textColor="@android:color/holo_purple"
            android:layout_centerVertical="true"
            android:fontFamily="calibri"
            android:layout_toEndOf="@+id/imageView3" />


    </RelativeLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ViewSwitcher
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/form_switcher" >

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:fontFamily="sans-serif-light"
                        android:singleLine="true"
                        android:background="#8876a9" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:background="#8876a9" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/forgot_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/holo_red_light"
                    android:text="@string/action_forgot_password"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/forgot_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_forgot_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#f00"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/email_forgot_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_forgot_submit"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/email_forgot_back"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@android:string/cancel"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/holo_red_light"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </ViewSwitcher>

    <ImageView
        android:layout_width="367dp"
        android:layout_height="213dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/back_vision_fade" />

</LinearLayout>
